--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ lazy_static = "1"
 parking_lot = "0.11"
 regex = "1"
 serde_json = "1"
+shlex = "1"
 xdg-basedir = "1"
 
 [dependencies.chrono]
@@ -24,13 +25,10 @@ features = ["from"]
 version = "1"
 features = ["derive"]
 
-[dependencies.shlex]
-git = "https://github.com/fenhl/rust-shlex"
-
 [dependencies.tokio]
-version = "0.2" #TODO update to 0.3/1.0 once supported by twitchchat
-features = ["macros", "rt-threaded"]
+version = "1"
+features = ["macros", "rt-multi-thread"]
 
 [dependencies.twitchchat]
-version = "0.14"
+git = "https://github.com/museun/twitchchat"
 features = ["async", "tokio", "tokio-rustls", "tokio-util", "webpki-roots"]
