--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,7 @@ features = ["macros", "rt-multi-thread"]
 git = "https://github.com/museun/twitchchat" #TODO get from crates.io once 6292ca3 is published
 rev = "6292ca3c523bcb31a2c746aaae88439fd0fb4c55"
 features = ["async", "tokio", "tokio-rustls", "tokio-util", "webpki-roots"]
+
+[dependencies.wheel]
+git = "https://github.com/fenhl/wheel"
+branch = "main"
